testsuite/tests/safeHaskell/flags/SafeFlags23.stderr

SafeFlags23.hs:1:16: error: [-Wunsafe, -Werror=unsafe]
    ‘SafeFlags22’ has been inferred as unsafe!
    Reason:
        SafeFlags23.hs:7:1: error:
            System.IO.Unsafe: Can't be safely imported!
            The module itself isn't safe.
